# pyhtml

./: .gitignore  README.md  chatbot_generated.py  debug_codegen.py  debug_codegen_chatbot.py  debug_directives_codegen.py  generated_code.txt  pyproject.toml  repro_scoping.py  reproduce_ast.py  run_comp_test.py  run_dev.py  test_bs4_multiline.py  test_compile_multiline.py  test_lsp_interactivity.py  test_lxml_multiline.py  test_lxml_multiline_single.py
demo-app/: .gitignore  README.md  pyproject.toml  reproduce_issue.py  run.sh
demo-app/src/: main.py  pyhtml.config.py
demo-app/src/pages/: 404.pyhtml  500.pyhtml  attributes.pyhtml  attributes.wire  directives.pyhtml  dx_demo.pyhtml  dx_demo.wire  forms_test.pyhtml  forms_test.wire  index.pyhtml  index.wire  interactivity.pyhtml  interactivity.wire  lifecycle_demo.pyhtml  lifecycle_demo.wire  test_multiline.pyhtml
demo-app/src/pages/basic/: __layout__.pyhtml  __layout__.wire  counter.pyhtml  counter.wire  home.pyhtml  home.wire  weather.pyhtml  weather.wire
demo-app/src/pages/basic-spa/: layout.pyhtml  layout.wire  main.pyhtml  main.wire
demo-app/src/pages/chatbot/: index.pyhtml  models.py
demo-app/src/static/: test.txt
demo-routing/: pyhtml.config.py  pyproject.toml
demo-routing/src/: main.py
demo-routing/src/pages/: __error__.wire  __layout__.pyhtml  about.pyhtml  about.wire  index.pyhtml  index.wire  layout.pyhtml  multiline.pyhtml
demo-routing/src/pages/users/: [id].pyhtml  [id].wire  __layout__.pyhtml  index.pyhtml  index.wire
lsp/: pyhtml_lsp_server  pyproject.toml  pywire_lsp_server
lsp/src/pyhtml_lsp/: server.py
lsp/src/pywire_lsp/: server.py
pyhtml/: pyproject.toml  test_inline_compilation.py
pyhtml/src/pyhtml/: __init__.py  config.py
pyhtml/src/pyhtml/cli/: generators.py  main.py  validate.py
pyhtml/src/pyhtml/client/: build.mjs  package-lock.json  package.json  pnpm-lock.yaml  test_output.txt  vitest.config.ts
pyhtml/src/pyhtml/client/coverage/: coverage-final.json  handler.ts.html  index.html
pyhtml/src/pyhtml/client/src/: dom-updater.ts  index.ts  pyhtml.core.ts  pyhtml.dev.ts  transport-manager.ts
pyhtml/src/pyhtml/client/src/core/: app.ts  dom-updater.ts  index.ts  transport-manager.test.ts  transport-manager.ts
pyhtml/src/pyhtml/client/src/dev/: dev-app.ts  error-trace.test.ts  index.ts  (+2 more)
pyhtml/src/pyhtml/compiler/: __init__.py  ast_nodes.py  build.py  exceptions.py  parser.py
pyhtml/src/pyhtml/compiler/attributes/: __init__.py  base.py  bind.py  conditional.py  events.py  form.py  loop.py  reactive.py
pyhtml/src/pyhtml/compiler/codegen/: __init__.py  generator.py  template.py
pyhtml/src/pyhtml/compiler/directives/: __init__.py  base.py  component.py  context.py  layout.py  no_spa.py  path.py  props.py
pyhtml/src/pyhtml/compiler/interpolation/: __init__.py  base.py  jinja.py
pyhtml/src/pyhtml/runtime/: __init__.py  aioquic_server.py  app.py  compile_error_page.py  debug.py  dev_server.py  dev_server.py.broken  error_page.py  files.py  h3_webtransport.py  helpers.py  http_transport.py  loader.py  logging.py  page.py  pydantic_integration.py  router.py  server.py  style_collector.py  upload_manager.py  validation.py  websocket.py  webtransport_handler.py
pyhtml/src/pyhtml/static/: pyhtml.core.min.js  pyhtml.core.min.js.map  pyhtml.dev.min.js  pyhtml.dev.min.js.map  pyhtml.min.js  pyhtml.min.js.map
pyhtml/src/tests/: test_compiler_sourcemap.py  test_custom_errors.py  test_inline_compilation.py  test_logging_stream.py  test_middleware_error.py  test_mode_gating.py  test_pjax_error.py
pyhtml/tests/: debug_router.py  test_app_advanced.py  test_app_exhaustive.py  test_app_mode.py  test_app_runtime.py  test_async_features.py  test_codegen_generator.py  test_codegen_template.py  test_codegen_template_exhaustive.py  test_compile_error.py  test_compiler_sourcemap.py  test_config.py  test_custom_errors.py  test_debug_middleware.py  test_debug_mock.py  test_error_handling_debug.py  test_file_routing.py  test_fixes.py  test_form_validation.py  test_generator_advanced.py  test_generator_exhaustive.py  test_hooks_removal.py  test_http_transport.py  test_inline_compilation.py  test_interactivity_codegen_complex.py  test_interactivity_compiler.py  test_jinja_interpolation.py  test_layouts.py  test_lifecycle_hooks.py  test_logging_stream.py  test_lsp_features.py  test_method_binding.py  test_middleware_error.py  test_mode_gating.py  test_multiline_handlers.py  test_naming_conventions.py  test_parser_advanced.py  test_parser_compiler.py  test_pjax_error.py  test_reactive_attributes.py  (+20 more)
(+243 files in other folders)
