[project]
name = "pyhtml-workspace"
version = "0.1.0"
description = "Workspace for PyHTML"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
    "pyhtml",
    "pyhtml-lsp",
]

[tool.uv]
workspace = { members = ["pyhtml", "lsp", "demo-app", "demo-routing"] }

[tool.uv.sources]
pyhtml = { workspace = true }
pyhtml-lsp = { workspace = true }
demo-app = { workspace = true }
demo-routing = { workspace = true }

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["pyhtml/tests", "pyhtml/src/tests", "lsp/tests", "tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:pygls.*"
]