[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhtml-lsp"
authors = [
    { name="Reece Holmdahl", email="reecelikesramen@duck.com" },
]
version = "0.0.1"
description = "Language Server Protocol implementation for PyHTML"
requires-python = ">=3.11"
dependencies = [
    "pygls>=1.3.0",
    "jedi>=0.19.0",
    "pyhtml",  # Depends on main package
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyhtml_lsp"]