[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhtml"
authors = [
    { name="Reece Holmdahl", email="reecelikesramen@duck.com" },
]
version = "0.0.1"
description = "HTML-over-the-wire Python web framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.35.0",
    "uvicorn[standard]>=0.27.0",
    "watchfiles>=0.21.0",
    "jinja2>=3.1.0",  # For initial template parsing
    "msgpack>=1.0.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "httpx>=0.23.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.0",
]
http3 = [
    "aioquic>=0.9.0",
    "hypercorn>=0.14.0",
]

[project.scripts]
pyhtml = "pyhtml.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pyhtml"]